--- a/web/adventure.html
+++ b/web/adventure.html
@@ -17,7 +17,7 @@
     <button id="button">Enter</button>
   </div>
 
-  <script type="application/dart" src="dart/adventure.dart"></script>
+  <script type="application/dart" src="game/adventure.dart"></script>
   <script src="packages/browser/dart.js" type="text/javascript"></script>
 </body>
 </html>
